removes overflow scroll to fix date picker modal window cut off

--- a/src/sass/Components/_CardModal.scss
+++ b/src/sass/Components/_CardModal.scss
@@ -18,7 +18,6 @@
     height: 85%;
     border-radius: 4px;
     padding: 10px;
-    overflow:scroll;
   }
 }
 
